Fix important token contrast

--- a/themes/learner/static/css/styles.css
+++ b/themes/learner/static/css/styles.css
@@ -530,7 +530,11 @@ figcaption::before {
     overflow-x: auto;
 }
 .token.function {
-    color: #ce2245
+    color: #ce2245;
+}
+
+.token.important {
+    color: #DA0474;
 }
 .token.operator {
     color: #73522c;
